# code-intel-memory

./: .gitignore  Makefile.cbm  README.md  install.ps1  install.sh  server.json
.github/: label-actions.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: _build.yml  _smoke.yml  _soak.yml  _test.yml  pages.yml  release-assets.yml  (+1 more)
docs/: BENCHMARK.md  EVALUATION_PLAN.md  RENAME_PLAN.md  SECURITY-DISCLOSURE.md  index.html  llms.txt  robots.txt  sitemap.xml
graph-ui/: index.html
pkg/pypi/: README.md  pyproject.toml
pkg/pypi/src/code_intel_memory/: __init__.py  _cli.py
scripts/: benchmark-search-graph.sh  build.sh  gen-third-party-notices.sh  security-allowlist.txt  security-install.sh  security-strings.sh  setup-windows.ps1  setup.sh  smoke-test.sh  soak-test.sh  test_mcp_rapid_init.py  vendored-checksums.txt
src/: main.c
tests/: scale_contract.sh  smoke_guard.sh  test_artifact.c  test_cli.c  test_convergence_probe.c  test_cpp_index_hang.sh  test_cypher.c  test_edge_imports.c  test_edge_structural.c  test_edge_types_probe.c  test_grammar_probe_a.c  test_grammar_probe_b.c  test_grammar_probe_c.c  test_grammar_probe_d.c  test_grammar_probe_e.c  test_grammar_probe_f.c  test_grammar_probe_g.c  test_incremental.c  test_integration.c  test_lang_contract.c  test_lsp_resolution_probe.c  test_main.c  test_matrix_known_classes.c  test_matrix_new_constructs.c  test_mcp.c  test_node_creation_probe.c  test_parent_watchdog.sh  test_registry.c  test_security.c  test_security_strings_allowlist.sh  test_ui.c  test_userconfig.c  test_yaml.c
(+37 files in other folders)
