[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-intel-memory"
version = "0.8.1"
description = "Fast code intelligence engine for AI coding agents — single static binary MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mcp", "claude", "code-intelligence", "codebase", "memory", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/heurema/code-intel-memory"
Repository = "https://github.com/heurema/code-intel-memory"
Issues = "https://github.com/heurema/code-intel-memory/issues"

[project.scripts]
code-intel-memory = "code_intel_memory:main"
codebase-memory-mcp = "code_intel_memory:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_intel_memory"]
